# search-engine-api

./: .env.example  Cargo.toml  README.md
src/: main.rs
src/database/: mod.rs  pool.rs  queries.rs
