[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["serde_derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
